--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Babu bolod</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam eos, praesentium iste perferendis hic natus similique nobis ex quibusdam debitis.</p>
+    <p>Hiloo hilao </p>
 </body>
 </html>
